# dermous

./: .gitignore  README.md  TODO.md  config.py  gutenberg_extract.py  pyproject.toml  requirements.txt  words_database.db
api/: database.py  main.py  models.py
app/: Books.py  Downloading.py  LLM.py  Words.py  WordsDatabase.py  clean.csv  csv_treatment.py  epub2txt.py  main.py
data/: post_script.sh
data/word_data/: Gesetzes.json  abenteür.json  aber.json  abgeschnitten.json  abgesehen.json  abhängig.json  abschluß.json  abschnitt.json  absicht.json  absichten.json  absichtlich.json  abwechselnd.json  achtung.json  ahnung.json  allgemeinen.json  alsdann.json  amerikanische.json  angefangen.json  angehörigen.json  angelegt.json  angenehmen.json  angesehen.json  angesicht.json  angesichts.json  angestellt.json  angriff.json  anhänger.json  ankunft.json  annahme.json  annehmen.json  anzahl.json  (+1193 more)
resulting_csv/: golden_words_german.csv
word_data/: aber,493973.json  abgeschlossen.json  abgrund.json  abwesenheit.json  achseln.json  allmählich.json  amerikanischen.json  andererseits.json  anerkannt.json  anerkennung.json  angaben.json  angegeben.json  angehört.json  angenehm.json  angenehme.json  ansicht.json  ansprüche.json  anteil.json  anzug.json  arbeit.json  arbeiten.json  arbeiter.json  arbeitete.json  auch,451030.json  auffallend.json  auffassung.json  aufgaben.json  aufgehoben.json  aufgelöst.json  aufgeregt.json  aufgestellt.json  aufhören.json  aufl.json  auflage.json  aufmerksamkeit.json  aufnehmen.json  aufrecht.json  aufregung.json  aufrichtig.json  aufs.json  (+967 more)
